# rules_powershell

./: .gitignore  404.html  MODULE.bazel  README.md  WORKSPACE.bazel  bzlmod.html  index.html  print.html  rules.html  searchindex.js  searchindex.json  toc.html  toc.js  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: ci.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md
powershell/: BUILD.bazel  defs.bzl  extensions.bzl  pwsh_binary.bzl  pwsh_info.bzl  pwsh_library.bzl  pwsh_test.bzl  pwsh_toolchain.bzl
powershell/private/: BUILD.bazel  entrypoint.bat  entrypoint.sh  entrypoint_maker.ps1  powershell.bzl  process_wrapper.ps1  pwsh_executable.bzl  toolchain.bzl  toolchain_repo.bzl  utils.bzl  versions.bzl
powershell/private/tests/binary/: BUILD.bazel  writer.ps1
powershell/private/tests/module/: BUILD.bazel  DummyManifest.psd1  cross_dir_test.ps1  debug_psmodulepath.ps1  inspect_runfiles.ps1  invalid_multiple_manifests_test.sh  manifest_test.ps1  module_test.ps1  module_writer.ps1  use_module.ps1
powershell/private/tests/module/MathFunctions/: MathFunctions.psm1
powershell/private/tests/module/ModuleWithManifest/: ModuleWithManifest.psd1
powershell/private/tests/module/math_functions/: BUILD.bazel
powershell/private/tests/module/module_with_manifest/: BUILD.bazel
powershell/private/tests/module/module_with_manifest/ModuleWithManifest/: ModuleWithManifest.psm1
powershell/private/tests/module/string_helpers/: BUILD.bazel
powershell/private/tests/module/string_helpers/StringHelpers/: StringHelpers.psm1
powershell/private/tests/module/subdir/: BUILD.bazel
powershell/private/tests/module/subdir/SubdirModule/: SubdirModule.psm1
powershell/private/tests/test/: BUILD.bazel  string_test.ps1
powershell/runfiles/: BUILD.bazel  README.md
powershell/runfiles/Runfiles/: Runfiles.psm1
powershell/runfiles/tests/: BUILD.bazel  test_runfiles.ps1
tools/update_versions/: update_versions.py
tools/version_test/: BUILD.bazel  version_test.ps1
