load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//powershell/private:toolchain.bzl", "current_pwsh_toolchain")

exports_files([
    "defs.bzl",
    "pwsh_binary.bzl",
    "pwsh_library.bzl",
    "pwsh_test.bzl",
    "pwsh_info.bzl",
    "extensions.bzl",
])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

current_pwsh_toolchain(
    name = "current_pwsh_toolchain",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "pwsh_binary_bzl",
    srcs = ["pwsh_binary.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//powershell/private:bzl_lib"],
)

bzl_library(
    name = "pwsh_info_bzl",
    srcs = ["pwsh_info.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//powershell/private:bzl_lib"],
)

bzl_library(
    name = "pwsh_library_bzl",
    srcs = ["pwsh_library.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//powershell/private:bzl_lib"],
)

bzl_library(
    name = "pwsh_test_bzl",
    srcs = ["pwsh_test.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//powershell/private:bzl_lib"],
)

bzl_library(
    name = "pwsh_toolchain_bzl",
    srcs = ["pwsh_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//powershell/private:bzl_lib"],
)

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":pwsh_binary_bzl",
        ":pwsh_info_bzl",
        ":pwsh_library_bzl",
        ":pwsh_test_bzl",
    ],
)

bzl_library(
    name = "extensions_bzl",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//powershell/private:bzl_lib"],
)
