load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":utils.bzl", "pwsh_entrypoint")

exports_files([
    "entrypoint.bat",
    "entrypoint.sh",
])

pwsh_entrypoint(
    name = "entrypoint",
    entrypoint = select({
        "@platforms//os:windows": "entrypoint.bat",
        "//conditions:default": "entrypoint.sh",
    }),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bazel_tools_bzl_lib",
    srcs = ["@bazel_tools//tools:bzl_srcs"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//powershell:__pkg__"],
    deps = [
        ":bazel_tools_bzl_lib",
    ],
)
