load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//powershell:pwsh_binary.bzl", "pwsh_binary")

pwsh_binary(
    name = "writer",
    srcs = ["writer.ps1"],
)

run_binary(
    name = "writer_output",
    outs = ["writer_output.txt"],
    args = [
        "-Output",
        "$(execpath :writer_output.txt)",
    ],
    tool = ":writer",
)

write_file(
    name = "writer_expected",
    out = "writer_expected.txt",
    content = [
        "La-Li-Lu-Le-Lo.",
        "",
    ],
    newline = "unix",
)

diff_test(
    name = "writer_diff_test",
    file1 = ":writer_expected.txt",
    file2 = ":writer_output.txt",
)
