load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//powershell:pwsh_binary.bzl", "pwsh_binary")
load("//powershell:pwsh_test.bzl", "pwsh_test")

pwsh_binary(
    name = "use_module",
    srcs = ["use_module.ps1"],
    deps = ["//powershell/private/tests/module/math_functions"],
)

pwsh_binary(
    name = "module_writer",
    srcs = ["module_writer.ps1"],
    deps = [
        "//powershell/private/tests/module/math_functions",
        "//powershell/private/tests/module/string_helpers",
    ],
)

run_binary(
    name = "module_writer_output",
    outs = ["module_writer_output.txt"],
    args = [
        "-Output",
        "$(execpath :module_writer_output.txt)",
    ],
    tool = ":module_writer",
)

write_file(
    name = "module_writer_expected",
    out = "module_writer_expected.txt",
    content = [
        "Sum: 50",
        "Product: 50",
        "Joined: Rules_PowerShell",
        "Reversed: llehSrewoP_seluR",
        "",
    ],
    newline = "unix",
)

diff_test(
    name = "module_writer_diff_test",
    file1 = ":module_writer_expected.txt",
    file2 = ":module_writer_output.txt",
)

pwsh_test(
    name = "module_test",
    srcs = ["module_test.ps1"],
    deps = [
        "//powershell/private/tests/module/math_functions",
        "//powershell/private/tests/module/string_helpers",
    ],
)

pwsh_test(
    name = "cross_dir_test",
    srcs = ["cross_dir_test.ps1"],
    deps = [
        "//powershell/private/tests/module/math_functions",
        "//powershell/private/tests/module/subdir:subdir_module",
    ],
)

# Inspect runfiles structure
pwsh_test(
    name = "inspect_runfiles",
    srcs = ["inspect_runfiles.ps1"],
    deps = [
        "//powershell/private/tests/module/math_functions",
        "//powershell/private/tests/module/subdir:subdir_module",
    ],
)

# Debug PSModulePath
pwsh_test(
    name = "debug_psmodulepath",
    srcs = ["debug_psmodulepath.ps1"],
    deps = ["//powershell/private/tests/module/math_functions"],
)

pwsh_test(
    name = "manifest_test",
    srcs = ["manifest_test.ps1"],
    deps = ["//powershell/private/tests/module/module_with_manifest"],
)
